[gd_scene load_steps=14 format=3 uid="uid://cbsnxwy6gnsfv"]

[ext_resource type="Script" uid="uid://dtrl4xbhbgoxo" path="res://scenes/components/death_component/death_component.gd" id="1_gv6il"]
[ext_resource type="Texture2D" uid="uid://urq5hnnqcosp" path="res://assets/particles.png" id="2_8ee4n"]
[ext_resource type="Texture2D" uid="uid://bsh85q1ovlpep" path="res://scenes/entities/enemies/rat/rat.png" id="2_1834d"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_lffis"]
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id="Curve_1834d"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.60724235, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_lffis"]
curve = SubResource("Curve_1834d")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_nyhqd"]
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
spread = 30.0
initial_velocity_min = 100.0
initial_velocity_max = 150.0
angular_velocity_min = -720.0
angular_velocity_max = 719.99994
gravity = Vector3(0, 400, 0)
scale_curve = SubResource("CurveTexture_lffis")
anim_offset_max = 1.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_wfofw"]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id="Gradient_sn0d4"]
offsets = PackedFloat32Array(0, 0.99889135)
colors = PackedColorArray(0.26666668, 0.88235295, 0.7019608, 1, 1, 0.19359714, 0.3302816, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_wfofw"]
gradient = SubResource("Gradient_sn0d4")

[sub_resource type="Curve" id="Curve_sn0d4"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.0005500559, 1), 0.0, 0.0, 0, 0, Vector2(0.75110465, 0.9962493), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_wfofw"]
curve = SubResource("Curve_sn0d4")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ibpoe"]
lifetime_randomness = 0.5
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 32.0
angle_min = -720.0
angle_max = 720.0
gravity = Vector3(0, 0, 0)
scale_min = 0.5
scale_max = 1.5
scale_curve = SubResource("CurveTexture_wfofw")
color_ramp = SubResource("GradientTexture1D_wfofw")
anim_offset_max = 1.0

[node name="DeathComponent" type="Node2D" unique_id=1363527081]
script = ExtResource("1_gv6il")

[node name="SpriteParticles" type="GPUParticles2D" parent="." unique_id=2071478106]
material = SubResource("CanvasItemMaterial_lffis")
emitting = false
amount = 3
texture = ExtResource("2_1834d")
lifetime = 0.6
one_shot = true
explosiveness = 1.0
fixed_fps = 0
interpolate = false
process_material = SubResource("ParticleProcessMaterial_nyhqd")

[node name="GlobGroundParticles" type="GPUParticles2D" parent="." unique_id=679642254]
z_index = -1
material = SubResource("CanvasItemMaterial_wfofw")
emitting = false
amount = 10
texture = ExtResource("2_8ee4n")
lifetime = 8.0
one_shot = true
explosiveness = 0.98
fixed_fps = 0
interpolate = false
process_material = SubResource("ParticleProcessMaterial_ibpoe")
